--- a/web/index.html
+++ b/web/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <base href="$FLUTTER_BASE_HREF">
+<html lang="es">
+<head>
+  <base href="$FLUTTER_BASE_HREF">
 
-    <meta charset="UTF-8">
-    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Explora nuestra app de accesorios tecnológicos, cámaras, estuches y más.">
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Explora nuestra app de accesorios tecnológicos, cámaras, estuches y más.">
 
-    <!-- 🌐 Metaetiquetas para compartir en redes sociales -->
-    <meta property="og:title" content="Tienda Tech - Accesorios y Gadgets">
-    <meta property="og:description" content="Descubre los mejores estuches, protectores, cámaras y más en nuestra app.">
-    <meta property="og:image" content="https://javierfigueroa.tail33d395.ts.net/static/images/banner_social.png">
-    <meta property="og:url" content="https://javierfigueroa.web.app">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
+  <!-- 🌐 Metaetiquetas Open Graph para redes sociales -->
+  <meta property="og:title" content="Tienda Tech - Accesorios y Gadgets">
+  <meta property="og:description" content="Descubre los mejores estuches, protectores, cámaras y más en nuestra app.">
+  <meta property="og:image" content="https://javier.tail1d9055.ts.net/get-screenshot">
+  <meta property="og:url" content="https://tu-tienda-tecnologica.web.app">
+  <meta property="og:type" content="website">
+  <meta property="fb:app_id" content="2191756187968390">
 
-    <!-- iOS meta tags & icons -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Tienda Tech">
-    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <!-- Meta etiquetas para Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Tienda Tech - Accesorios y Gadgets">
+  <meta name="twitter:description" content="Descubre los mejores estuches, protectores, cámaras y más en nuestra app.">
+  <meta name="twitter:image" content="https://javier.tail1d9055.ts.net/get-screenshot">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png"/>
+  <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Tienda Tech">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-    <title>Tienda Tech</title>
-    <link rel="manifest" href="manifest.json">
-  </head>
-  <body>
-    <script src="flutter_bootstrap.js" async></script>
-  </body>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>Tienda Tech</title>
+  <link rel="manifest" href="manifest.json">
+</head>
+<body>
+<script src="flutter_bootstrap.js" async></script>
+</body>
 </html>
